🔒 Security: Move all credentials to environment variables
- Remove hardcoded Firebase keys from frontend (src/firebase.js)
- Update backend to use env vars (helpdesk/api/firebase_config.py)
- Add .env.example files for safe sharing
- Update .gitignore to protect sensitive files
- Replace verbose deployment docs with secure DEPLOY.md
- Remove unnecessary deployment summary files

No sensitive information is now committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,17 @@
 plan/
 
 # ===================================
+# SENSITIVE CREDENTIALS (CRITICAL!)
+# ===================================
+# Never commit these files!
+serviceAccountKey.json
+**/serviceAccountKey.json
+firebase-adminsdk-*.json
+.env
+.env.local
+.env.*.local
+
+# ===================================
 # PYTHON / DJANGO
 # ===================================
 *.py[cod]
